--- a/Basic_Statistics.ipynb
+++ b/Basic_Statistics.ipynb
@@ -302,7 +302,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "nbOYKNgLpHlE",
         "outputId": "4bacd8cb-61ca-495e-cb25-3e276268523c"
@@ -343,7 +344,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "JXXpJ6s3py7q",
         "outputId": "29fcd5d0-d65c-45fd-ccd6-aa8d16e6ef0c"
@@ -369,7 +371,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "GXm2CmA2ppDh",
         "outputId": "bfa3c510-8e1d-4e98-8dbb-c5c51ec0a2fd"
@@ -405,7 +408,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "eCjEa7oWqEwl",
         "outputId": "2b166660-3984-4379-a82c-bf90deb8a9bc"
@@ -451,7 +455,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "V0oqEoSkqfrk",
         "outputId": "b91c9697-abe1-4454-c4e6-b834323b213f"
@@ -490,7 +495,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "lMeyQbEqqmUN",
         "outputId": "693cea05-144f-4ede-c3a4-13d20f2b4dca"
@@ -754,7 +760,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "URlFk-bdrTcU",
         "outputId": "0bb357e3-d259-4edc-ba9c-a49f6fb39bbe"
@@ -793,7 +800,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "VqGBVE41rYwC",
         "outputId": "83a35d42-e590-460a-e88a-5f45029d8ea0"
@@ -833,7 +841,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4M9yLHGLreNR",
         "outputId": "3d4207d8-4d31-4122-adcc-75b5f0916dd7"
@@ -872,7 +881,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "kA9VJnzKr83B",
         "outputId": "1687622f-8a61-44ce-82ea-7ff0d6c1df38"
@@ -911,7 +921,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "KWayMr7IsW9C",
         "outputId": "45ed8412-cb9b-4ff0-db94-4d4ec1889410"
@@ -1282,7 +1293,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "eFbwGgbpthHz",
         "outputId": "d7a2cb24-8a91-4baa-dc05-1803b126294c"
@@ -1321,7 +1333,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "w83NXY7Rt29c",
         "outputId": "3db30ef1-cc1f-440b-b912-e98ddc778e7c"
@@ -1360,7 +1373,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "UEeUBU4UuK77",
         "outputId": "b35a3ebf-a8b3-4239-e4be-b638fbaf67b4"
@@ -1400,7 +1414,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "rQ0QeLRXuf-z",
         "outputId": "13bbe88f-d0d1-43eb-9a9a-7b93fbf3b25c"
