--- a/probability_lab.ipynb
+++ b/probability_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMtZIfWp6Ax6/RjJVBE36i",
+      "authorship_tag": "ABX9TyMmUsfGvws34Ave9QqNXgRw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Law of large number"
+        "# Law of large number\n",
+        "- According to the law of large numbers, if we increase the number of trials in an experiment, the law of probability will start to become more clear to us. Consider the following coin toss experiment as an example. If we take 100 times of trials, we see that the result is heads 49 times and tails 51 times, the more trials we take, the closer the results will be. You can test by increasing or decreasing the number of code trials if you want.\n"
       ],
       "metadata": {
         "id": "VoI6wtsTbcgr"
@@ -143,6 +144,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from random import randint\n",
         "trails = 10000\n",
         "outcome = []\n",
         "\n",
@@ -212,6 +214,8 @@
         "def a_and_b(A, B, total):\n",
         "  probability_A = B/total\n",
         "  probability_B = B/total\n",
+        "\n",
+        "  # Multiplication Law\n",
         "  AB = probability_A*probability_B\n",
         "  print('Probability(A and B)', round(AB, 3))\n"
       ],
@@ -249,10 +253,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Probability Adding Law\n",
+        "- There are 30 students in a class, including 17 boys and 13 girls. 4 boys and 5 girls got A+ in class test. Now if you are asked to pick a student at random what is the probability of that student getting a girl or an A+?\n"
+      ],
+      "metadata": {
+        "id": "ShUnBOYbo7ig"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def A_or_B(A, B, AnB, total):\n",
+        "  PA = A/total\n",
+        "  PB = B/total \n",
+        "  AnB = AnB/total\n",
+        "  \n",
+        "  # Addtion law\n",
+        "  AB = PA*PB-AnB\n",
+        "  \n",
+        "  print('P(A or B): ', round(AnB, 3))\n"
+      ],
+      "metadata": {
+        "id": "dGGbat1jgU13"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "dGGbat1jgU13"
+        "id": "T_GhVdPKrG8E"
       },
       "execution_count": null,
       "outputs": []
