--- a/probability_lab.ipynb
+++ b/probability_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmUsfGvws34Ave9QqNXgRw",
+      "authorship_tag": "ABX9TyM7KiHg2EMrA4EH2FwIOmaq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "JAHTeOQOaPki"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "id": "lm6R_yy9aqv1",
         "outputId": "f114bbc9-0aa7-4171-c648-759690ce5e63"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
         "id": "fNLpjmf2axME",
         "outputId": "13e62cba-8a71-428c-f801-69ce513a5e48"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "id": "2sGlmoLncpjF",
         "outputId": "93fad9f7-89bf-43ae-ada5-9e6cd4c755fb"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "8uI5-HqTeq95"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
         "id": "SEnYygZKf-aa",
         "outputId": "18cd9f5e-5306-4c5f-bb8f-7f540ed1d089"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,37 +255,265 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Probability Multiplication Law\n",
+        "- For `Conditional or Dependent Event`\n"
+      ],
+      "metadata": {
+        "id": "jYOv1A4uhYDz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question:\n",
+        "- A box contains 5 green pencils and 7 yellow pencils. Suppose you first pick up a yellow pencil and never put it back. `What is the probability that the second pencil will be yellow?`"
+      ],
+      "metadata": {
+        "id": "vjcy650oi_Ml"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def a_and_b_conditional(a, b, total):\n",
+        "  PA = a/total\n",
+        "  remaining_total = total-1\n",
+        "  PB = remaining_total/total\n",
+        "\n",
+        "  # formula\n",
+        "  ab = PA*PB\n",
+        "  print('P(A and B)', round(ab, 3))"
+      ],
+      "metadata": {
+        "id": "YpGj-x-2hfxg"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# yellow = 7\n",
+        "# remaining_yellow = 6\n",
+        "# total = 12\n",
+        "# a_and_b_conditional(yellow, remaining_yellow, total)\n",
+        "a_and_b_conditional(7,6,12)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XeFLmf4Zhf1K",
+        "outputId": "8ed563f2-35a0-47b6-e356-5aca21d58d8f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P(A and B) 0.535\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Probability Adding Law\n",
-        "- There are 30 students in a class, including 17 boys and 13 girls. 4 boys and 5 girls got A+ in class test. Now if you are asked to pick a student at random what is the probability of that student getting a girl or an A+?\n"
+        "- For `Mutually Exclusive event`\n",
+        "\n"
       ],
       "metadata": {
         "id": "ShUnBOYbo7ig"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Question:\n",
+        "- `Probability of a King or Queen:` Suppose you are asked to pick any card from a pack of 52 cards. What is the probability that your chosen card will be a King or Queen?\n"
+      ],
+      "metadata": {
+        "id": "Wd7UPchln98z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "def A_or_B(A, B, AnB, total):\n",
+        "def A_or_B(A, B,total):\n",
         "  PA = A/total\n",
         "  PB = B/total \n",
-        "  AnB = AnB/total\n",
         "  \n",
         "  # Addtion law\n",
-        "  AB = PA*PB-AnB\n",
+        "  AB = PA+PB\n",
         "  \n",
-        "  print('P(A or B): ', round(AnB, 3))\n"
+        "  print('P(A or B): ', round(AB, 3))\n"
       ],
       "metadata": {
         "id": "dGGbat1jgU13"
       },
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# king=4\n",
+        "# queen=4\n",
+        "# total=52\n",
+        "# A_or_B(king, queen, total)\n",
+        "A_or_B(4, 4, 52)"
+      ],
+      "metadata": {
+        "id": "T_GhVdPKrG8E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "55f7431c-ba3e-42c7-8708-0495a29edbc2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P(A or B):  0.154\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Probability Adding Law\n",
+        "- For `Common event`"
+      ],
+      "metadata": {
+        "id": "OxR2c96QpBDf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question:\n",
+        "- There are 30 students in a class, including 17 boys and 13 girls. 4 boys and 5 girls got A+ in class test. Now if you are asked to pick a student at random what is the probability of that student getting a girl or an A+?\n"
+      ],
+      "metadata": {
+        "id": "FrUAQyhFpKdN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def a_or_b_common(a, b, anb, total):\n",
+        "  PA = a/total\n",
+        "  PB = b/total\n",
+        "  AnB = anb/total\n",
+        "\n",
+        "  # formula\n",
+        "  AB = PA+PB-AnB\n",
+        "\n",
+        "  print('P(A or B: ', round(AB, 3))\n"
+      ],
+      "metadata": {
+        "id": "_e-klsBAnr9M"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# boys = 9\n",
+        "# girls = 13\n",
+        "# girls_and_Aplus = 5\n",
+        "# total = 30\n",
+        "\n",
+        "# a_or_b_common(boys, girls, girls_and_Aplus, total)\n",
+        "a_or_b_common(9, 13,5, 30)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y3WSWmZ4tsVh",
+        "outputId": "30229827-52c2-4de8-b270-1c0f57888868"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P(A or B:  0.567\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bayes theorem\n",
+        "### Question:\n",
+        "- Let's say you plan to go out for a picnic with family and friends on a Friday in January. When you wake up on Friday morning, you see the sky is cloudy, and you have a worry on your forehead, if it rains, all your plans are canceled! If you have some previous information, using this information, you want to know the probability of rain today?\n",
+        "### `Prior information:`\n",
+        "- 40% of the days are cloudy in the morning\n",
+        "- 50% of the time it rains only when the sky is cloudy\n",
+        "- January usually does not rain more than 3 days (10%)"
+      ],
+      "metadata": {
+        "id": "3vfEBM_3uzy_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rain_prediction(a, b):\n",
+        "  cloud_or_rain = P_cloud + P_rain\n",
+        "\n",
+        "  # formula\n",
+        "  probability_of_rain = (P_rain * cloud_or_rain) / P_cloud\n",
+        "  print('probability of rain in cloudy weather: ', round(probability_of_rain, 3))"
+      ],
+      "metadata": {
+        "id": "ljR7bIc3udP9"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# P_cloud = 0.4\n",
+        "# P_rain = 0.1\n",
+        "\n",
+        "# rain_prediction(P_rain, P_cloud)\n",
+        "rain_prediction(0.4, 0.1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZBgFtkhiyKVi",
+        "outputId": "26282c92-2f92-4d7e-a183-5d80ab371564"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "probability of rain in cloudy weather:  0.125\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "T_GhVdPKrG8E"
+        "id": "VrUDG1gnzP0O"
       },
       "execution_count": null,
       "outputs": []
