--- a/probability_lab.ipynb
+++ b/probability_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7KiHg2EMrA4EH2FwIOmaq",
+      "authorship_tag": "ABX9TyNDXe+GKdwob7aQOMQaxfDX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -470,35 +470,36 @@
       "cell_type": "code",
       "source": [
         "def rain_prediction(a, b):\n",
-        "  cloud_or_rain = P_cloud + P_rain\n",
+        "  c = b + a  # P_cloud + P_rain\n",
         "\n",
         "  # formula\n",
-        "  probability_of_rain = (P_rain * cloud_or_rain) / P_cloud\n",
+        "  probability_of_rain = (a * c) / b\n",
         "  print('probability of rain in cloudy weather: ', round(probability_of_rain, 3))"
       ],
       "metadata": {
         "id": "ljR7bIc3udP9"
       },
-      "execution_count": 32,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# P_cloud = 0.4\n",
         "# P_rain = 0.1\n",
+        "# P_cloud = 0.4\n",
+        "\n",
         "\n",
         "# rain_prediction(P_rain, P_cloud)\n",
-        "rain_prediction(0.4, 0.1)"
+        "rain_prediction(0.1, 0.4)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZBgFtkhiyKVi",
-        "outputId": "26282c92-2f92-4d7e-a183-5d80ab371564"
+        "outputId": "bf888d0c-f35f-41e0-b6e3-9ace5e0580ec"
       },
-      "execution_count": 34,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
