--- a/6_Statistical_Terms_should_know.ipynb
+++ b/6_Statistical_Terms_should_know.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVWtokmTKdnv4uqSORIuIA",
+      "authorship_tag": "ABX9TyNHdR8cwCQaIF7JaGahrnq8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,16 +204,81 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "A t-test is a statistical test that allows you to compare the means of two groups of data and determine if they are significantly different. It helps you to answer questions such as: `“Are the means of two groups of data different from each other?”` or `“Is the difference between two means statistically significant?”`\n",
+        "\n",
+        "There are two types of t-tests: `the independent samples t-test` and the `paired samples t-test`. \n",
+        "- The `independent samples t-test` is used when you have `two independent groups of data`, \n",
+        "- while the `paired samples t-test` is used when you have `two related groups of data`, such as `pre-test` and `post-test measurements` on the same subjects."
+      ],
       "metadata": {
         "id": "-KZA886LgRY_"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "from scipy.stats import ttest_ind"
+      ],
       "metadata": {
         "id": "1XmqdCd3SbW4"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load data into two separated dataframes\n",
+        "df1 = pd.read_csv('group1.csv')\n",
+        "df2 = pd.read_csv('group2.csv') "
+      ],
+      "metadata": {
+        "id": "S5hI3MC0lnWu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# perform t-test \n",
+        "# using the ttest_ind function from the scipy.stats library\n",
+        "# the function returns the t-statistic and p-value of the test\n",
+        "\n",
+        "t_test, p_value = ttest_ind(df1['variable'], df2['variable'])\n",
+        "\n",
+        "# print result\n",
+        "\n",
+        "print(f't-statistic: {t_stat}')\n",
+        "print(f'p-value: {p_value}')\n",
+        "\n",
+        "if p_value < 0.05:\n",
+        "  print('The means of two groups are significantly different.')\n",
+        "else:\n",
+        "  print('There are no significantly difference between the means of two groups')"
+      ],
+      "metadata": {
+        "id": "gRpiXLhPlrBK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The t-test is a useful statistical tool for comparing the means of two groups of data and determining if the difference between them is significant."
+      ],
+      "metadata": {
+        "id": "h1YIDTRUnQMC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7H46yFevmtLS"
       },
       "execution_count": null,
       "outputs": []
