--- a/6_Statistical_Terms_should_know.ipynb
+++ b/6_Statistical_Terms_should_know.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHdR8cwCQaIF7JaGahrnq8",
+      "authorship_tag": "ABX9TyOzhyRNvQ6CXR8nGp8cqamO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "mZOQA-NPIP1x"
       },
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "xdMEjjeiNQ5F"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "OGQJkJJkNpBo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "Wz0WPt48NvFE"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "gRaCq8c2Nulj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "iCfsQqQbQuQ_"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "id": "vU4fJ1tCRFCY",
         "outputId": "7eb8acb8-c9a2-45b0-adcf-9f3734e65af6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,23 +219,24 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "from scipy.stats import ttest_ind"
       ],
       "metadata": {
         "id": "1XmqdCd3SbW4"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# load data into two separated dataframes\n",
+        "# Load data into two separate dataframes\n",
         "df1 = pd.read_csv('group1.csv')\n",
-        "df2 = pd.read_csv('group2.csv') "
+        "df2 = pd.read_csv('group2.csv')"
       ],
       "metadata": {
-        "id": "S5hI3MC0lnWu"
+        "id": "_sFXCmWdcqPw"
       },
       "execution_count": null,
       "outputs": []
@@ -275,10 +276,126 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Effect Size"
+      ],
+      "metadata": {
+        "id": "uThGb4Bvcu9w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Effect size is the size of the difference between two groups or things. It measures the magnitude of the relationship or the degree of difference between the groups, independent of the sample size. Let’s say you have a big pile of cookies and your friend has a small pile of cookies. The effect size would be how many more cookies you have than your friend. If you have just a few more cookies than your friend, that’s a small effect size. But if you have a whole lot more cookies than your friend, that’s a big effect size. Effect size helps us understand how different things are from each other, so we can figure out if the difference is really important or not.\n",
+        "\n",
+        "There are several ways to calculate the effect size, depending on the type of data and analysis used. Some common measures of effect size include Cohen’s d, Pearson’s r, and odds ratios."
+      ],
+      "metadata": {
+        "id": "H0StsjWgcxxo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import scipy.stats as stats\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "7H46yFevmtLS"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create two groups of data\n",
+        "\n",
+        "group1 = np.random.normal(10, 2, size=100)   # loc(mean), scale(std), size(number of item)\n",
+        "group2 = np.random.normal(12, 2, size=100)"
+      ],
+      "metadata": {
+        "id": "YchT8anXdGL6"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate Cohen's d(standardized mean difference)\n",
+        "# which is the difference between the means of the two groups divided by the pooled standard deviation.\n",
+        "\n",
+        "diff = group1.mean() - group2.mean()\n",
+        "polled_std = np.sqrt((group1.std()**2 + group2.std()**2) / 2)\n",
+        "d = diff/polled_std\n",
+        "\n",
+        "#print the result\n",
+        "print(f'Cohens d: {d}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CaDCNoLbdYw_",
+        "outputId": "abd2509e-6a5f-4ec5-ad9b-291d0a3664d6"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cohens d: 0.17188865477991933\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A Cohen’s d of \n",
+        "- `0.2` is considered a `small effect size` - (small difference or relationship between the groups), \n",
+        "- `0.5` is considered a `medium effect size` - (moderate difference or relationship between the groups or variables), and \n",
+        "- `0.8 or higher` is considered a `large effect size` (strong difference or relationship between the groups or variables)."
+      ],
+      "metadata": {
+        "id": "wxLEHTo8hqcv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The effect size is an important statistical concept that helps researchers to understand the practical significance of their findings and to compare results across different studies."
+      ],
+      "metadata": {
+        "id": "A-4usEvpiDBx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Power Analysis"
+      ],
+      "metadata": {
+        "id": "6e0TBhjpiLN3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Power analysis is a statistical method used to determine the sample size (how many data points/participants) required to detect a statistically significant effect in a study. It helps researchers to determine the probability of correctly rejecting the null hypothesis (i.e., finding a significant effect) if a true effect exists. At my job, we use it to estimate the number of participants for user research. In other words, power analysis allows researchers to estimate the statistical power of their study, which is the probability of detecting a true effect if it exists. A high statistical power means that the study is more likely to find a significant effect if there is one, while a low power means that the study is less likely to detect a significant effect even if there is one."
+      ],
+      "metadata": {
+        "id": "3Y1GC2WFljlF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7H46yFevmtLS"
+        "id": "njM8ZhHxgffg"
       },
       "execution_count": null,
       "outputs": []
